Update dashboard images and localize app text
Replaced dashboard stat images with new SVGs and updated user avatar to use a webp image. Localized the register page and index.html title to Portuguese. Adjusted topbar avatar styling for improved appearance.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>MCI - Trade License Management System</title>
+    <title>
+        MCI - Sistema de Gestão de Licenças Comerciais e Industriais
+    </title>
     <base href="/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
